--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<title>Home</title>
 	</head>
 	<body>
@@ -38,3 +38,4 @@
 		</footer>
 	</body>
 </html>
+
