--- a/index.html
+++ b/index.html
@@ -12,17 +12,12 @@
 			<div id="nav">
 				<ul>
 					<li><a href="">Home</a></li>
-			  		<li><a href="">About</a></li>
-			  		<li><a href="">Courses</a></li>
-			  		<li><a href="">Artifacts</a></li>
-			  		<li><a href="">Module Assignments</a></li>
-			  		<li><a href="">Contact</a></li>
-			  		<li><a href="">Facts!</a></li>
-			  		<li><a href="">Validated</a></li>
+			  		<li><a href="">Career Paths</a></li>
+			  		<li><a href="">Computer Anatomy</a></li>
+			  		<li><a href="">Productivity Tools</a></li>
+			  		<li><a href="">Cloud vs Local</a></li>
+			  		<li><a href="">References</a></li>
 				</ul>
-				<audio controls>
-					<source src="">
-				</audio>
 			</div>
 		</div>
 		<div id="content">
@@ -30,7 +25,7 @@
 				<p>Feature</p>
 		</div>
 		<div id="footer">
-			<p>&copy; Copyright 2024</p>
+			<p>&copy; Copyright 2026</p>
 		</div>
 		<footer>
 			<p><a href="https://validator.w3.org/" target="_blank"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88"></a>
@@ -38,4 +33,5 @@
 		</footer>
 	</body>
 </html>
+
 
