--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<title>Home</title>
+		<title>How IT Supports Modern Life</title>
 	</head>
 	<body>
 		<div id="header">
-			<h1>Home</h1>
+			<h1>How IT Supports Modern Life</h1>
 			<div id="nav">
 				<ul>
-					<li><a href="">Home</a></li>
-			  		<li><a href="">Career Paths</a></li>
-			  		<li><a href="">Computer Anatomy</a></li>
-			  		<li><a href="">Productivity Tools</a></li>
-			  		<li><a href="">Cloud vs Local</a></li>
-			  		<li><a href="">References</a></li>
+					<li><a href="https://jordangatewood28.github.io/IT101/index.html">Home</a></li>
+			  		<li><a href="https://jordangatewood28.github.io/IT101/careers.html">Career Paths</a></li>
+			  		<li><a href="https://jordangatewood28.github.io/IT101/anatomy.html">Computer Anatomy</a></li>
+			  		<li><a href="https://jordangatewood28.github.io/IT101/tools.html">Productivity Tools</a></li>
+			  		<li><a href="https://jordangatewood28.github.io/IT101/cloudvslocal.html">Cloud vs Local</a></li>
+			  		<li><a href="https://jordangatewood28.github.io/IT101/references.html">References</a></li>
 				</ul>
 			</div>
 		</div>
@@ -33,5 +33,6 @@
 		</footer>
 	</body>
 </html>
+
 
 
