--- a/careers.html
+++ b/careers.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width">
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<title>How IT Supports Modern Life</title>
+	</head>
+	<body>
+		<div id="header">
+			<h1>How IT Supports Modern Life</h1>
+			<div id="nav">
+				<ul>
+					<li><a href="https://jordangatewood28.github.io/IT101/index.html">Home</a></li>
+			  		<li><a href="https://jordangatewood28.github.io/IT101/careers.html">Career Paths</a></li>
+			  		<li><a href="https://jordangatewood28.github.io/IT101/anatomy.html">Computer Anatomy</a></li>
+			  		<li><a href="https://jordangatewood28.github.io/IT101/tools.html">Productivity Tools</a></li>
+			  		<li><a href="https://jordangatewood28.github.io/IT101/cloudvslocal.html">Cloud vs Local</a></li>
+			  		<li><a href="https://jordangatewood28.github.io/IT101/references.html">References</a></li>
+				</ul>
+			</div>
+		</div>
+		<div id="content">
+			<div id="feature">
+				<p>Feature</p>
+		</div>
+		<div id="footer">
+			<p>&copy; Copyright 2026</p>
+		</div>
+		<footer>
+			<p><a href="https://validator.w3.org/" target="_blank"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88"></a>
+			<a href="https://jigsaw.w3.org/css-validator/" target="_blank"><img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"></a></p></div>
+		</footer>
+	</body>
+</html>
 
