Add introduction article section to index.html
Added an article section with an introduction to IT and its impact on daily life.

--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
 				</ul>
 			</div>
 		</div>
-		<div id="content">
-			<div id="feature">
-				<p>Feature</p>
-		</div>
+		<article>
+			<h2>Introduction</h2>
+  			<p>Information Technology, or IT, is a daily part of our lives as it provides us easy access to information than ever before and enhancing long range communication, bring the world ever closer</p>
+			<p>Regardless if it is work or just a daily chore, IT makes life convenient, whether if it is online shopping, education, office work, streaming, and geolocation when you're in the middle of nowhere.</p>
+			<p>Even for when you miss your parents or significant others so dearly, modern technology provides instantaneous communication from anywhere in the world.</p>
+			<p>Provided that you have internet connection to that particular part of the world. Something that we tend to not really think about until it happens.</p>
+		</article>
 		<div id="footer">
 			<p>&copy; Copyright 2026</p>
 		</div>
@@ -33,6 +36,7 @@
 		</footer>
 	</body>
 </html>
+
 
 
 
