Add article discussing Cloud vs Local Storage
Replaced feature section with article on Cloud vs Local Storage.

--- a/cloudvslocal.html
+++ b/cloudvslocal.html
@@ -20,10 +20,10 @@
 				</ul>
 			</div>
 		</div>
-		<div id="content">
-			<div id="feature">
-				<p>Feature</p>
-		</div>
+		<article>
+  			<h2>Cloud vs Local Storage</h2>
+  			<p>Each have their own advantages and disadvantages. Cloud allows you to have instantaneous access to files online and even provide essential data security for when things go awry. However, what Local storage lacks in data security and access is cyber security and redundancy. Cloud storage has been subject cyber attacks, data breaches, and outages over the years and unfortunately, there is no effective mean of stopping attacks and outages completely although this can be mitigated. See recent Amazon Web Services for an example. Local storage allows you to access files locally if you have a copy and continue to work on it. Often times, the two work hand in hand for maximum effect.</p>
+		</article>
 		<div id="footer">
 			<p>&copy; Copyright 2026</p>
 		</div>
