Update careers section with IT careers information
Replaced feature section with an article about Information Technology careers.

--- a/careers.html
+++ b/careers.html
@@ -20,10 +20,10 @@
 				</ul>
 			</div>
 		</div>
-		<div id="content">
-			<div id="feature">
-				<p>Feature</p>
-		</div>
+		<article>
+			<h2>Information Technology Careers</h2>
+			<p>There are many careers within Information Technology in the modern world and all of them are essential. However, one I'm interested in is a Software Developer. Also known as a Software Engineer.</p>
+		</article>
 		<div id="footer">
 			<p>&copy; Copyright 2026</p>
 		</div>
