Add references section to references.html
Added a references section with an ordered list.

--- a/references.html
+++ b/references.html
@@ -20,10 +20,15 @@
 				</ul>
 			</div>
 		</div>
-		<div id="content">
-			<div id="feature">
-				<p>Feature</p>
-		</div>
+		<h2>References</h2>
+
+		<ol>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ol>
 		<div id="footer">
 			<p>&copy; Copyright 2026</p>
 		</div>
