Update tools.html with productivity tools section
Added new content about productivity tools and updated navigation links.

--- a/tools.html
+++ b/tools.html
@@ -12,18 +12,20 @@
 			<div id="nav">
 				<ul>
 					<li><a href="https://jordangatewood28.github.io/IT101/index.html">Home</a></li>
-			  		<li><a href="https://jordangatewood28.github.io/IT101/careers.html">Career Paths</a></li>
-			  		<li><a href="https://jordangatewood28.github.io/IT101/anatomy.html">Computer Anatomy</a></li>
 			  		<li><a href="https://jordangatewood28.github.io/IT101/tools.html">Productivity Tools</a></li>
 			  		<li><a href="https://jordangatewood28.github.io/IT101/cloudvslocal.html">Cloud vs Local</a></li>
+					<li><a href="https://jordangatewood28.github.io/IT101/anatomy.html">Computer Anatomy</a></li>
+					<li><a href="https://jordangatewood28.github.io/IT101/careers.html">Career Paths</a></li>
 			  		<li><a href="https://jordangatewood28.github.io/IT101/references.html">References</a></li>
 				</ul>
 			</div>
 		</div>
-		<div id="content">
-			<div id="feature">
-				<p>Feature</p>
-		</div>
+		<article>
+			<h2>Productivity Tools</h2>
+			<p>There is a large variety of productivity tools out there. One example of a productivity tool is the humble calender. Many people, including me don't use it as much as they probably should to keep track with assignments, projects, and important events. A lot of missed or late work tends to stem from poor planning and no reminders written on calendars.</p>
+			<p>It isn't just a calendar, clocks count as productivity tools as setting alarms can remind you to take a break or get back to work. Remember when you wake up really late because you didn't set an alarm before bed or when you took that nap at lunch? A lot of that stems from the lack of numbers.</p>
+			<p>Despite solutions already existing. They aren't perfect and companies around the world have always been looking for new ways to enhance it. Primarily through cloud services and communication. Discord, Microsoft Teams, Zoom, Onedrive and Google Drive are prime examples.</p>
+		</article>
 		<div id="footer">
 			<p>&copy; Copyright 2026</p>
 		</div>
