--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 		</div>
 		<article>
 			<h2>Introduction</h2>
-  			<p>Information Technology, or IT, is a daily part of our lives as it provides us easy access to information than ever before and enhancing long range communication, bring the world ever closer. Regardless if it is work or just a daily chore, IT makes life convenient, whether if it is online shopping, education, office work, streaming, and geolocation when you're in the middle of nowhere. Even for when you miss your parents or significant others so dearly, modern technology provides instantaneous communication from anywhere in the world. Provided that you have internet connection to that particular part of the world. Something that we tend to not really think about until it happens.</p>
+  			<p>Information Technology, or IT, is a daily part of our lives as it provides us easy access to information than ever before and enhancing long range communication, bring the world ever closer as modern technology progresses.</p>
+			<p>Regardless if it is work or just a daily chore, IT makes life convenient, whether if it is online shopping, education, office work, streaming, and geolocation when you're in the middle of nowhere. Even for when you miss your parents or significant others so dearly, modern technology provides instantaneous communication from anywhere in the world. Provided that you have internet connection to that particular part of the world. Something that we tend to not really think about until it happens.</p>
 		</article>
 		<div id="footer">
 			<p>&copy; Copyright 2026</p>
@@ -33,6 +34,7 @@
 		</footer>
 	</body>
 </html>
+
 
 
 
