--- a/careers.html
+++ b/careers.html
@@ -22,7 +22,9 @@
 		</div>
 		<article>
 			<h2>Information Technology Careers</h2>
-			<p>There are many careers within Information Technology in the modern world and all of them are essential. However, one I'm interested in is a Software Developer. Also known as a Software Engineer.</p>
+			<p>There are many careers within Information Technology in the modern world and all of them are essential. However, one I'm interested in is a Software Developer. Also known as a Software Engineer. I will call them developers for simplicity.</p>
+			<p>Software Developers are essential as they are responsible for designing, creating, developing, and maintaining the final product. They are a critical component to Information Technology as a whole along many others and as thus will remain in high demand despite the proliferation of Artificial Intelligence, or AI. In fact, with the proliferation of AI, developers have adapted to the field to accomodate and even work with it to achieve optimal results.</p>
+			<p>According to the Bureau of Labor Statistics, while the job itself is stagnating due to the pool of developers becoming larger and larger due to how lucrative it is, it is still expected to see a 15% increase in demand from 2024 to 2034. They had a median pay of $131,450 per year in 2024 due to the skillset they offer.</p>
 		</article>
 		<div id="footer">
 			<p>&copy; Copyright 2026</p>
