Add reference link for software developers

--- a/references.html
+++ b/references.html
@@ -23,7 +23,7 @@
 		<h2>References</h2>
 
 		<ol>
-			<li></li>
+			<li><a href="https://www.bls.gov/ooh/computer-and-information-technology/software-developers.htm">https://www.bls.gov/ooh/computer-and-information-technology/software-developers.htm</a></li>
 			<li></li>
 			<li></li>
 			<li></li>
